--- a/DjangoToDoListApp/templates/djangotodolistapp/index.html
+++ b/DjangoToDoListApp/templates/djangotodolistapp/index.html
@@ -44,7 +44,7 @@
     </tr>
   </thead>
   <tbody>
-  {% for item in latest_todoitems_list %}
+  {% for item in currentToDoItems %}
       <tr>
         <td>{{ item.id }}</td>
         <td>{{ item.item_text|truncatechars:25 }}</td>
@@ -59,8 +59,8 @@
 <nav aria-label="Page navigation">
   <ul class="pagination">
     <li>
-      {% if latest_todoitems_list.has_previous %}
-          <a href="?page={{ latest_todoitems_list.previous_page_number }}" aria-label="Previous">
+      {% if currentToDoItems.has_previous %}
+          <a href="?page={{ currentToDoItems.previous_page_number }}" aria-label="Previous">
             <span aria-hidden="true">&laquo;</span>
           </a>
       {% endif %}
@@ -69,8 +69,8 @@
         <li><a href="?page={{ pageNumber }}">{{ pageNumber }}</a></li>
     {% endfor %}
     <li>
-      {% if latest_todoitems_list.has_next %}
-          <a href="?page={{ latest_todoitems_list.next_page_number }}" aria-label="Next">
+      {% if currentToDoItems.has_next %}
+          <a href="?page={{ currentToDoItems.next_page_number }}" aria-label="Next">
             <span aria-hidden="true">&raquo;</span>
           </a>
       {% endif %}
