- Complete Create New To Do Item function  + Create create.html template  + Create form + validation from server side  + Add Create view

--- a/DjangoToDoListApp/templates/djangotodolistapp/base.html
+++ b/DjangoToDoListApp/templates/djangotodolistapp/base.html
@@ -11,7 +11,9 @@
 <html>
 <head>
     <title>Django To Do List App</title>
-    <link rel="stylesheet" href="{% static 'djangotodolistapp/index.css' %}">
+    <link rel="stylesheet" href="{% static 'djangotodolistapp/base.css' %}">
+    {% block stylesheet %}
+    {% endblock %}
 </head>
 
 <body>
